[package]
name = "starpoo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.14"
specs-derive = "0.4"
rand = "0.6"

[dependencies.sdl2]
version = "*"
default-features = false
features = ["image"]